@@ -1,3 +1,8 @@
+2001-10-01  Nick Clifton  <nickc@cambridge.redhat.com>
+
+	* readelf.c (display_debug_aranges): Warn about DWARF64 format
+	.debug_arange sections.
+
 2001-08-05  Philip Blundell  <philb@gnu.org>
 
 	* binutils.texi (objdump): Fix typos.  Use "Thumb" not "THUMB".
